<resources>
    <string name="app_name">FitY</string>
    <string name="get_started">GET STARTED</string>
    <string name="logo">logo</string>
    <string name="fity">FITY</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="reminder">Reminder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyCEECpF0mnedeHbNDR1PuStXqOrKTxWUW4</string>
    <string name="rationale">FitY requires your location permission to record your runs routes</string>
    <string name="notification_title">Run in progress…</string>
    <string name="timer">00:00:00</string>
    <string name="finish">Finish</string>
    <string name="start_run">Start</string>
    <string name="stop_run">Stop</string>
    <string name="test">hhh</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="duration">Duration</string>
    <string name="runners_route">Runners route</string>
    <string name="sort">Sort By:</string>
    <string name="your_profile">Hello, Danny</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name:</string>
    <string name="weight">Weight</string>
    <string name="edit_your_details">Save</string>
    <string name="your_name">Your Name</string>
    <string name="your_weight">Your Weight</string>
    <string name="go">Continue</string>
    <string name="welcome">Welcome To FITY</string>
    <string name="description">Best app for your body fitness</string>
    <string name="weight_error">Weight should greater than 0</string>
    <string name="name_error">Name should be at least 5 characters</string>
    <string name="empty_fields_error">Please input your details to continue</string>
    <string name="edit">Edit Your Details</string>
    <string name="result">This weeks result</string>
    <string name="total_distance">TOTAL DISTANCE</string>
    <string name="total_time">TOTAL TIME</string>
    <string name="average_speed">AVERAGE SPEED</string>
    <string name="total_calories_burned">CALORIES BURNED</string>
    <string name="bar_title">Average Speed Over Time</string>
    <string name="run_saved">Run saved successfully</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Distance</item>
        <item>Time</item>
        <item>Speed</item>
        <item>Calories</item>
    </string-array>
</resources>