<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.views.SplashActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/boot"
        android:tintMode="screen"
        app:tint="@color/orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fity"
        app:layout_constraintStart_toStartOf="@id/logo"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        />
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="150dp"
        app:icon="@drawable/ic_forward"
        android:drawablePadding="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:drawableEnd="@drawable/ic_forward"
        android:background="@drawable/bordered_button"
        android:textColor="@color/white"
        android:outlineProvider="background"
        />
</androidx.constraintlayout.widget.ConstraintLayout>