<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/card_radius"
    android:elevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">
        <LinearLayout
            android:id="@+id/topContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/imageViewTime"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:contentDescription="@string/time"
                    android:src="@drawable/ic_timer"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                     />
                <TextView
                    tools:text="5hrs 43min"
                    android:id="@+id/runTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/imageViewDistance"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:contentDescription="@string/time"
                    android:src="@drawable/ic_timer"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    />
                <TextView
                    tools:text="5km"
                    android:id="@+id/runDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <ImageView
                    android:id="@+id/imageViewSpeed"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:contentDescription="@string/time"
                    android:src="@drawable/ic_timer"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    />
                <TextView
                    tools:text="5hrs 43min"
                    android:id="@+id/runSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    />
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_marginTop="@dimen/margin_small"
            android:id="@+id/routeImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/topContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_speed"
            android:contentDescription="@string/runners_route" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>